--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,9 +1,8 @@
-@tailwind base;
+@import "tailwindcss";
 @plugin "tailwindcss-animate";
+@tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-@import "tw-animate-css";
 
 /** Colors **/
 :root {
