[OTHERS] add placeholder text color in globals.css

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -144,6 +144,11 @@
   }
 }
 
+::placeholder {
+  color: gray; /* This will make the placeholder text gray */
+  opacity: 1; /* Ensures full opacity across all browsers, including Firefox */
+}
+
 /** Custom Scrollbar **/
 @layer base {
   ::-webkit-scrollbar {
